--- a/symbol/CMakeLists.txt
+++ b/symbol/CMakeLists.txt
@@ -17,3 +17,5 @@ include_directories(${INCLUDE_DIR})
 message(${THIRD_PARTY}/elfin-parser/elf)
 ADD_LIBRARY(sym SHARED ${SYMBOL_SRC})
 target_link_libraries(sym elf_static dwarf_static pthread)
+install(TARGETS sym DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(FILES ${SYMBOL_FILE_DIR}/symbol.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
