Add some unit tests for API, test for: - Input different cpu list, pid list to PmuOpen - Input different duration to PmuCollect - Sample process and check pmu data for SAMPLING and SPE_SAMPLING - Sample system and check pmu data for SAMPLING and SPE_SAMPLING

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,5 +34,6 @@ message("TOP_DIR is ${TOP_DIR}")
 include(${CMAKE_CURRENT_LIST_DIR}/Common.cmake)
 add_subdirectory(symbol)
 add_subdirectory(pmu)
+add_subdirectory(test)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
