--- a/pmu/CMakeLists.txt
+++ b/pmu/CMakeLists.txt
@@ -33,6 +33,6 @@ include_directories(${PMU_DECODER_DIR})
 ADD_LIBRARY(kperf SHARED ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC})
 target_link_libraries(kperf numa sym)
 target_compile_options(kperf PRIVATE -fPIC)
-install(TARGETS kperf  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(TARGETS kperf  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 file(GLOB HEADER_FILES ${PROJECT_TOP_DIR}/include/*.h)
 install(FILES ${HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
