--- a/test/test_perf/case/CMakeLists.txt
+++ b/test/test_perf/case/CMakeLists.txt
@@ -8,5 +8,9 @@ foreach(source_file IN LISTS source_files)
     get_filename_component(target_name ${source_file} NAME_WE)
 
     add_executable("${target_name}" "${source_file}")
+    if (${target_name} STREQUAL "vectorized_loop")
+        target_compile_options(${target_name} PRIVATE -g -O3)
+    endif()
+
     target_link_libraries("${target_name}" pthread numa)
 endforeach()
