add UT execution script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ set(CMAKE_INSTALL_PREFIX "${PROJECT_TOP_DIR}/output/" CACHE PATH "Installation d
 
 cmake_minimum_required (VERSION 3.12.0)
 set(CMAKE_CXX_STANDARD 11)
+if (INCLUDE_TEST)
+    set(CMAKE_CXX_STANDARD 14)
+endif()
 set(CMAKE_C_STANDARD 11)
 if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8.5)
     message(FATAL_ERROR "GCC 4.8.5 or newer required")
@@ -34,5 +37,9 @@ message("TOP_DIR is ${TOP_DIR}")
 include(${CMAKE_CURRENT_LIST_DIR}/Common.cmake)
 add_subdirectory(symbol)
 add_subdirectory(pmu)
+
+if (INCLUDE_TEST)
+    add_subdirectory(test)
+endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
