--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,12 @@ if (POLICY CMP0048)
 endif (POLICY CMP0048)
 set(PROJECT_TOP_DIR ${CMAKE_CURRENT_LIST_DIR})
 project(libkprof)
-set(CMAKE_INSTALL_PREFIX "${PROJECT_TOP_DIR}/output/" CACHE PATH "Installation directory" FORCE)
+if(NOT DEFINED CMAKE_INSTALL_PREFIX OR CMAKE_INSTALL_PREFIX STREQUAL "")
+    set(CMAKE_INSTALL_PREFIX "${PROJECT_TOP_DIR}/output/" CACHE PATH "Installation directory" FORCE)
+endif()
+if (NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
+    set(CMAKE_BUILD_TYPE Release)
+endif()
 
 cmake_minimum_required (VERSION 3.12.0)
 set(CMAKE_CXX_STANDARD 11)
@@ -26,9 +31,6 @@ endif()
 set(CMAKE_C_STANDARD 11)
 if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8.5)
     message(FATAL_ERROR "GCC 4.8.5 or newer required")
-endif()
-if (NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
 endif()
 
 set(TOP_DIR ${PROJECT_SOURCE_DIR})
