--- a/test/test_perf/CMakeLists.txt
+++ b/test/test_perf/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/../../util)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/pfm)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/analyzer/metric)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/decoder)
 include_directories(${PROJECT_TOP_DIR}/include)
 add_compile_options(-g)
 set(CMAKE_CXX_STANDARD 14)
