add test for go interface

--- a/go/CMakeLists.txt
+++ b/go/CMakeLists.txt
@@ -6,8 +6,7 @@ set(TARGET_LIB_DIR ${CMAKE_CURRENT_LIST_DIR}/src/libkperf/lib)
 file(MAKE_DIRECTORY ${TARGET_INCLUDE_DIR})
 file(MAKE_DIRECTORY ${TARGET_LIB_DIR})
 
-file(GLOB HEAD_FILES "${CMAKE_INSTALL_PREFIX}/include/*")
-file(GLOB SO_FILES "${CMAKE_INSTALL_PREFIX}/lib/*")
+file(GLOB HEAD_FILES "${CMAKE_CURRENT_LIST_DIR}/../include/*.h" "${CMAKE_CURRENT_LIST_DIR}/../symbol/symbol.h")
 
-file(COPY ${HEAD_FILES} DESTINATION ${TARGET_INCLUDE_DIR})
-file(COPY ${SO_FILES} DESTINATION ${TARGET_LIB_DIR})
+install(FILES ${HEAD_FILES} DESTINATION ${TARGET_INCLUDE_DIR})
+install(TARGETS sym kperf DESTINATION ${TARGET_LIB_DIR})
