support python3.6 && python whl format

--- a/python/modules/CMakeLists.txt
+++ b/python/modules/CMakeLists.txt
@@ -20,9 +20,14 @@ configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in
     ${CMAKE_CURRENT_SOURCE_DIR}/setup.py
 )
+if(DEFINED PYTHON_WHL AND PYTHON_WHL)
+    set(BIN_TYPE "bdist_wheel")
+else()
+    set(BIN_TYPE "install")
+endif()
 
 add_custom_target(${PROJECT_NAME} ALL
-    COMMAND ${PYTHON_EXECUTABLE} setup.py install
+    COMMAND ${PYTHON_EXECUTABLE} setup.py ${BIN_TYPE}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
