--- a/python/modules/setup.py.in
+++ b/python/modules/setup.py.in
@@ -16,11 +16,12 @@ from setuptools import setup, find_packages
 
 libkperf_path = '@LIBKPERF_PATH@'
 libsym_path = '@LIBSYM_PATH@'
+_libkperf_path = '@SETUP_LIBKPERF_PATH@'
 
 setup(
     name='libkperf',
     version='1.0',
     packages=find_packages(),
-    data_files=[('/_libkperf', [libkperf_path, libsym_path])]
+    data_files=[(_libkperf_path, [libkperf_path, libsym_path])]
 )
 
