--- a/pmu/CMakeLists.txt
+++ b/pmu/CMakeLists.txt
@@ -31,8 +31,11 @@ include_directories(${SYMBOL_FILE_DIR})
 include_directories(${PMU_DECODER_DIR})
 
 ADD_LIBRARY(kperf SHARED ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC})
+ADD_LIBRARY(kperf_static STATIC ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC})
+set_target_properties(kperf_static PROPERTIES OUTPUT_NAME "kperf")
 target_link_libraries(kperf numa sym)
 target_compile_options(kperf PRIVATE -fPIC)
 install(TARGETS kperf  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(TARGETS kperf_static  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 file(GLOB HEADER_FILES ${PROJECT_TOP_DIR}/include/*.h)
 install(FILES ${HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
