--- a/symbol/CMakeLists.txt
+++ b/symbol/CMakeLists.txt
@@ -16,6 +16,9 @@ include_directories(${INCLUDE_DIR})
 
 message(${THIRD_PARTY}/elfin-parser/elf)
 ADD_LIBRARY(sym SHARED ${SYMBOL_SRC})
+ADD_LIBRARY(sym_static STATIC ${SYMBOL_SRC})
+set_target_properties(sym_static PROPERTIES OUTPUT_NAME "sym")
 target_link_libraries(sym elf_static dwarf_static pthread)
 install(TARGETS sym DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(TARGETS sym_static DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 install(FILES ${SYMBOL_FILE_DIR}/symbol.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
