--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,14 @@ endif()
 
 set(TOP_DIR ${PROJECT_SOURCE_DIR})
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -fno-plt")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -fno-plt ")
+
+if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "^(arm|aarch64)")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv8.2-a")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -march=armv8.2-a")
+endif()
+
 message("TOP_DIR is ${TOP_DIR}")
 include(${CMAKE_CURRENT_LIST_DIR}/Common.cmake)
 add_subdirectory(symbol)
