--- a/pmu/CMakeLists.txt
+++ b/pmu/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SYMBOL_FILE_DIR ${PROJECT_TOP_DIR}/symbol)
 set(PMU_FILE_DIR ${PROJECT_TOP_DIR}/pmu)
 set(PFM_FILE_DIR ${PROJECT_TOP_DIR}/pmu/pfm)
 set(PMU_DECODER_DIR ${PMU_FILE_DIR}/decoder)
+set(PMU_BPF_DIR ${PMU_FILE_DIR}/bpf)
 
 # Source files                                      #
 file(GLOB UTIL_SRC ${UTIL_FILE_DIR}/*.cpp)
@@ -20,6 +21,7 @@ file(GLOB PMU_SRC ${PMU_FILE_DIR}/*c ${PMU_FILE_DIR}/*cpp)
 file(GLOB PMU_DECODER_SRC ${PMU_DECODER_DIR}/*.cpp)
 file(GLOB SYMBOL_SRC ${SYMBOL_FILE_DIR}/*c ${SYMBOL_FILE_DIR}/*cpp)
 file(GLOB PFM_SRC ${PFM_FILE_DIR}/*c ${PFM_FILE_DIR}/*cpp)
+file(GLOB BPF_SRC ${PMU_BPF_DIR}/*cpp)
 
 include_directories(${PROJECT_TOP_DIR}/include)
 include_directories(${PMU_FILE_DIR}/)
@@ -30,8 +32,18 @@ include_directories(${UTIL_FILE_DIR})
 include_directories(${SYMBOL_FILE_DIR})
 include_directories(${PMU_DECODER_DIR})
 
-ADD_LIBRARY(kperf SHARED ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC})
-ADD_LIBRARY(kperf_static STATIC ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC})
+if (BPF)
+    message(STATUS "BPF is true. building with bpf submodule")
+    add_compile_definitions(BPF_ENABLED)
+    include_directories(${PMU_FILE_DIR}/bpf)
+    include_directories(${PROJECT_TOP_DIR}/third_party/libbpf)
+    link_directories(${PROJECT_TOP_DIR}/third_party/local/bpf)
+    set(BPF_SOURCES ${BPF_SRC})
+else ()
+    set(BPF_SOURCES "")
+endif()
+ADD_LIBRARY(kperf SHARED ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC} ${BPF_SOURCES})
+ADD_LIBRARY(kperf_static STATIC ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC} ${BPF_SOURCES})
 set_target_properties(kperf_static PROPERTIES OUTPUT_NAME "kperf")
 target_link_libraries(kperf sym)
 target_compile_options(kperf PRIVATE -fPIC)
