--- a/test/test_perf/CMakeLists.txt
+++ b/test/test_perf/CMakeLists.txt
@@ -4,6 +4,9 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/pfm)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/analyzer/metric)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/decoder)
+if (BPF)
+    include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/bpf)
+endif()
 include_directories(${PROJECT_TOP_DIR}/include)
 add_compile_options(-g)
 set(CMAKE_CXX_STANDARD 14)
