add bpf mode files && revise compile

--- a/pmu/CMakeLists.txt
+++ b/pmu/CMakeLists.txt
@@ -36,16 +36,21 @@ if (BPF)
     message(STATUS "BPF is true. building with bpf submodule")
     add_compile_definitions(BPF_ENABLED)
     include_directories(${PMU_FILE_DIR}/bpf)
-    include_directories(${PROJECT_TOP_DIR}/third_party/libbpf)
-    link_directories(${PROJECT_TOP_DIR}/third_party/local/bpf)
+    include_directories(${PROJECT_TOP_DIR}/third_party/local/bpf/usr/include)
+    link_directories(${PROJECT_TOP_DIR}/third_party/local/bpf/usr/lib64)
     set(BPF_SOURCES ${BPF_SRC})
 else ()
     set(BPF_SOURCES "")
 endif()
 ADD_LIBRARY(kperf SHARED ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC} ${BPF_SOURCES})
 ADD_LIBRARY(kperf_static STATIC ${PMU_SRC} ${UTIL_SRC} ${PFM_SRC} ${PMU_DECODER_SRC} ${BPF_SOURCES})
+
 set_target_properties(kperf_static PROPERTIES OUTPUT_NAME "kperf")
-target_link_libraries(kperf sym)
+if (BPF)
+    target_link_libraries(kperf sym bpf)
+else ()
+    target_link_libraries(kperf sym)
+endif()
 target_compile_options(kperf PRIVATE -fPIC)
 install(TARGETS kperf  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 install(TARGETS kperf_static  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
