--- a/test/test_perf/CMakeLists.txt
+++ b/test/test_perf/CMakeLists.txt
@@ -12,6 +12,11 @@ add_compile_options(-g)
 set(CMAKE_CXX_STANDARD 14)
 aux_source_directory(. SOURCE_SRC)
 add_executable(test_perf ${SOURCE_SRC} ${CMAKE_CURRENT_LIST_DIR}/../../util/pcerr.cpp)
-target_link_libraries(test_perf sym kperf gtest m gtest_main elf_static dwarf_static pthread -g)
+
+set(COMMON_LIBS sym kperf gtest m gtest_main elf_static dwarf_static pthread -g)
+if (BPF)
+    set(BPF_LIBS bpf)
+endif()
+target_link_libraries(test_perf ${COMMON_LIBS} ${BPF_LIBS})
 
 add_subdirectory(case)
