--- a/test/test_perf/CMakeLists.txt
+++ b/test/test_perf/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/analyzer/metric)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/decoder)
 if (BPF)
     include_directories(${CMAKE_CURRENT_LIST_DIR}/../../pmu/bpf)
+    add_compile_definitions(BPF_ENABLED)
 endif()
 include_directories(${PROJECT_TOP_DIR}/include)
 add_compile_options(-g)
